--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.jpa.hibernate.ddl-auto=update
 #configuração email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=20230009210@estudantes.ifpr.edu.br
+spring.mail.username=rafaelscarpelli715@gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#rafaelscarpelli934@gmail.com
+#rafaelscarpelli715@gmail.com
+#20230009210@estudantes.ifpr.edu.br
