--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,9 +11,12 @@ spring.jpa.hibernate.ddl-auto=update
 #configuração email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rafaelscarpelli715@gmail.com
+spring.mail.username=20230009210@estudantes.ifpr.edu.br
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 #rafaelscarpelli934@gmail.com
 #rafaelscarpelli715@gmail.com
